fixed catalogue section z-index

--- a/source/sass/blocks/catalogue.scss
+++ b/source/sass/blocks/catalogue.scss
@@ -4,8 +4,7 @@
     background-position: center;
     min-height: 790px;
     position: relative;
-    margin-top: -45px;
-    z-index: -1;
+    margin-top: -45px;    
 }
 
 .catalogue__info {
