--- a/source/sass/blocks/portfolio.scss
+++ b/source/sass/blocks/portfolio.scss
@@ -1,20 +1,20 @@
 .portfolio {
     background-image: url(../img/background/portfolio.jpg);
     background-repeat: no-repeat;
-    margin-bottom: 180px;      
+    margin-bottom: 180px;
 }
 
 .portfolio__inner {
     display: flex;
     flex-direction: column;
-    align-items: center;    
+    align-items: center;
 }
 
 .portfolio__info {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;    
+    align-items: center;
     margin-top: 75px;
 }
 
@@ -30,26 +30,41 @@
     color: #79b51c;
 }
 
-.portfolio__descr {    
+.portfolio__descr {
     color: #c8c8c8;
 }
 
 .portfolio__works {
     margin-top: 92px;
     display: flex;
-    flex-wrap: wrap;    
+    flex-wrap: wrap;
 }
 
 .portfolio__work {
-    max-width: 375px;
-    max-height: 365px;
-    margin-right: 18px;
+    margin-right: 13px;
     position: relative;
     margin-bottom: 10px;
+    transition: 0.4s all;
 
     &:last-child {
-        max-width: 769px;
+        max-width: 774px;
     }
+
+    &:hover {       
+        .portfolio__work-link {
+            background-color: #79b51c;
+        }
+    }
+}
+
+.portfolio__work-image {
+    min-width: 375px;
+    height: 350px;       
+}
+
+.portfolio__work-img {
+    height: 100%;
+    width: 100%;
 }
 
 .portfolio__work-link {
@@ -60,12 +75,7 @@
     height: 80px;
     background-color: #000;
     display: flex;
-    align-items: center; 
-    transition: 0.3s ease;
-
-    &:hover {
-        background-color: #79b51c;
-    }
+    align-items: center;
 }
 
 .portfolio__work-title {
@@ -77,10 +87,10 @@
     color: #fff;
 }
 
-.portfolio__catalogue {  
+.portfolio__catalogue {
     display: flex;
-    justify-content: center;    
-    font-weight: 600; 
+    justify-content: center;
+    font-weight: 600;
     line-height: 50px;
     width: 350px;
     height: 45px;
