--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -6,8 +6,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
-
 }
 
 .products__item {
@@ -17,10 +15,7 @@
     margin-bottom: 50px;
 
     &:nth-child(even) {
-        flex-direction: row-reverse;
-        .products__title {
-
-        }
+        flex-direction: row-reverse;        
     }
 }
 
