--- a/source/sass/general/global.scss
+++ b/source/sass/general/global.scss
@@ -160,5 +160,6 @@ input[type=number] {
   background: #79b51c;
   border-radius: 5px;
   color: #fff;
+  outline: none;
 }
 
